k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeview
  labels:
    name: homeview
    environment: production
